# msw-hotkey

./: Cargo.toml  README.md
src/: hotkey.rs  lib.rs
src/hotkey/: modifier.rs  parse_hotkey_error.rs  shortcut_key.rs  special_key.rs  visible_key.rs
