[package]
name = "msw-hotkey"
version = "0.1.1"
edition = "2021"
authors = ["LucaXiang<luca.xiang@outlook.com>"]
repository = "https://github.com/DaSeinUndZeit/msw-hotkey"
documentation = "https://docs.rs/msw-hotkey"
description = "A hotkey library for Microsoft Windows"
keywords = ["Windows","hotkey", "hotkey-utils", "hotkey-parser", "shortcut-key"]
categories = ["os", "os::windows-apis", "parser-implementations"]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
